--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -28,4 +28,5 @@
 
 <br>
 
-<%= link_to 'New Transaction', new_transaction_path %>
+<p><%= link_to 'New Transaction', new_transaction_path %>
+<%= link_to 'Dashboard', root_path %></p>
