--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :type %><br>
-    <%= f.text_field :type %>
+    <%= f.select :type %>
   </div>
   <div class="field">
     <%= f.label :receiver %><br>
