--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -15,7 +15,7 @@
   <tbody>
     <% @transactions.each do |transaction| %>
       <tr>
-        <td><%= transaction.type %></td>
+        <td><%= transaction.transaction_type %></td>
         <td><%= transaction.receiver %></td>
         <td><%= transaction.amount %></td>
         <td><%= link_to 'Show', transaction %></td>
