--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @transaction.type %>
+  <strong>Transaction type:</strong>
+  <%= @transaction.transaction_type %>
 </p>
 
 <p>
