--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,12 @@
-<div align="center">
-<h2>You have money!!</h2>
 
+  <div align="center">
+
+    <h1>Online Wallet</h1><br><br>
+    <h2>Use this program to keep track of your money and expenses</h2><br>
+
+    <p>The total amount of money you currently have is: </p>
+
+
+    <p><%= link_to 'New Transaction', new_transaction_path %><br><br>
+      <%= link_to 'All Transactions', transactions_path %></p>
 </div>
