Cleaned up some code in /form.html.erb

--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :transaction_type %><br>
-    <%= f.select :transaction_type, options_for_select([["Deopsit Money"],["Withdraw Money"]])%>
+    <%= f.select :transaction_type, options_for_select([["Deposit"],["Withdraw"]])%>
   </div>
   <div class="field">
     <%= f.label :receiver %><br>
